--- a/gb/23/9/17/n14075664.md
+++ b/gb/23/9/17/n14075664.md
@@ -7,68 +7,59 @@
 </h6>
 <hr>
 <p>【大纪元2023年09月18日讯】（大纪元记者王兰多伦多报导）一项新的研究揭示了在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>最难购房的地方，并对各省<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%B0%E6%88%BF.md#1">买房</a>难易程度进行<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8E%92%E5%90%8D.md#1">排名</a>。</p>
-<p>MetroVancouverHomeSource.com 根据每个省的平均房价和年收入中位数来确定<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8E%92%E5%90%8D.md#1">排名</a>，尽管卑诗省的房地产价位高，但安省在排名中成为最难<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%B0%E6%88%BF.md#1">买房</a>的省份。</p>
-<p>报告发现，安省的平均房价高达931,870元，而年收入中位数为41,690元。安省的生活成本也高昂，儿童保育、食品和家庭维护成本都不便宜，不过医疗保健成本是十个省中最低的。</p>
-<p>卑诗省与安省相比，2023年的房屋平均成本更高，平均房价为996,460元，与2022年相比飙升，达到亚伯塔省的两倍多，但由于“平均抵押保险费最低”，购房机会方面比安省更好，但生活成本也难负担，包括最昂贵的公共交通、医疗保健和教育费用。</p>
+<p>MetroVancouverHomeSource.com根据每个省的平均房价和年收入中位数来确定<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8E%92%E5%90%8D.md#1">排名</a>，尽管卑诗省的房地产价位高，但安省在排名中成为最难<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%B0%E6%88%BF.md#1">买房</a>的省份。</p>
+<p>报告发现，安省的平均房价高达93万1,870元，而年收入中位数为41,690元。安省的生活成本也高昂，儿童保育、食品和家庭维护成本都不便宜，不过医疗保健成本是十个省中最低的。</p>
+<p>卑诗省与安省相比，2023年的房屋平均成本更高，平均房价为99万6,460元，与2022年相比飙升，达到亚伯塔省的两倍多，但由于“平均抵押保险费最低”，购房机会方面比安省更好，但生活成本也难负担，包括最昂贵的公共交通、医疗保健和教育费用。</p>
 <p>根据这项研究，亚省虽然被广泛传播着“负担得起”的信息，但税费、水费、保险费和医疗费用仍然很高，而且可供购买的房屋数量也不多。</p>
-<p>目前亚省的平均房价为447,444元，年收入中位数为44,850元，为十个省中第二高。</p>
-<p>以下是最容易买房的省份（平均房价）的完整排名</p>
-<p>1、纽芬兰和拉布拉多省（291,806元）</p>
-<p>2、新布伦瑞克省省（289,785元）</p>
-<p>3、爱德华王子岛省（388,844元）</p>
-<p>4、新斯科舍省（411,784元）</p>
-<p>5、曼省（360,373元）</p>
-<p>6、魁省（483,573元）</p>
-<p>7、萨省（303,260元）</p>
-<p>8、亚省（447,444元）</p>
-<p>9、卑诗省（996,460元）</p>
-<p>10、安省（931,870元）</p>
-<p>责任编辑：严枫</p>
-
-<hr>
-
-
+<p>目前亚省的平均房价为44万7,444元，年收入中位数为44,850元，为十个省中第二高。</p>
+<p>以下是最容易买房的省份（平均房价）的完整排名：</p>
+<p>1. 纽芬兰和拉布拉多省（29万1,806元）；</p>
+<p>2. 新布伦瑞克省（28万9,785元）；</p>
+<p>3. 爱德华王子岛省（38万8,844元）；</p>
+<p>4. 新斯科舍省（41万1,784元）；</p>
+<p>5. 曼省（36万零373元）；</p>
+<p>6. 魁省（48万3,573元）；</p>
+<p>7. 萨省（30万3,260元）；</p>
+<p>8. 亚省（44万7,444元）；</p>
+<p>9. 卑诗省（99万6,460元）；</p>
+<p>10. 安省（93万1,870元）。</p>
+<p>责任编辑：严枫#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075672.md#1">加拿大将向乌克兰运送防空导弹</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075661.md#1">满地可银行宣布关闭汽车贷款业务 将裁员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073976.md#1">调查：过半加拿大公司使用人工智能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073984.md#1">加国调查中共干涉 两议员加强联系中共机构</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14074028.md#1">联邦政府将取消新建出租公寓货劳税</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14074025.md#1">博励治发布住房计划 针对膨胀的官僚机构</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14073970.md#1">民调：许多加拿大人希望在三年内出售房屋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073271.md#1">预计加拿大秋季天气 初秋寒冷 赏枫佳期短</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073272.md#1">民调：过半加国人望渥京减移民目标</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105531.md#1">保守党领袖博励治称特鲁多为选票暂停碳税</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105518.md#1">卑诗法官裁定公寓楼华人业主缴税600万元</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105516.md#1">报告：加拿大企业外资控股正在下降</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105462.md#1">渥京促加拿大公民尽快离开黎巴嫩</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103743.md#1">加拿大反疫苗强制法案未通过二读投票</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103718.md#1">加拿大11省牙医协会吁联邦公布新牙保细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103775.md#1">美国枪击案嫌犯在逃 加拿大海关发警报</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103765.md#1">道银：加国房市年内回落 明春回升 安省领跌</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103747.md#1">加拿大央行行长：政府支出阻碍降低通胀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103715.md#1">哈以冲突 罹难加拿大人增至七人</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/14/n11044461.md#1" target="_blank">钟声：他们晚年为何忏悔</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977742.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(2) 历练的旅程</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/29/n11010874.md#1" target="_blank">共产暴政录：计划生育是毁我中华的屠婴战争（下）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/2/8/n11032583.md#1" target="_blank">拥有幸福健康 澳洲民众感恩法轮功师父</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071125.md#1">【人物真相】尹锡悦 坚决抗共的亚洲政治强人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014354.md#1">南朝人的奇幻之旅 进入另外空间 看到了世外高人 知道了前朝秘辛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071134.md#1">【未解之谜】不爱江山爱美人？顺治之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14067903.md#1">【杨延昭传奇】乱世中的命定姻缘（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069647.md#1">白日飞升的许旌阳  积了什么大功德鸡犬升天？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/16/n14075195.md#1">【菁英论坛】茅台会落幕 权斗升温新阶段</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075303.md#1">【新闻五人行】副国级抓不完 习全面宣战？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/16/n14075231.md#1">【时事军事】陆军战术导弹对乌克兰为什么重要</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074525.md#1">【内幕】李尚福落马 供出装备发展部八将领</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074281.md#1">李尚福被抓坐实 分析：习对谁都不放心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074440.md#1">王毅缺席两重要国际场合 惹恼习被责令写检查</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074253.md#1">婚前偕女友飞俄国古堡 徐新洋遵传统访女方家</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074691.md#1">陆第一网红李子柒油管停更2年 新视频微博疯传</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14074019.md#1">周杰伦携昆凌为妈妈庆生 婆媳贴脸合照似母女</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073947.md#1">颁奖礼上搞丢昂贵钻石 泰勒被拍到惊恐表情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073999.md#1">郑裕玲为何被叫Do姐？原来因家中一小物件</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071720.md#1">戒糖后更易减肥 身体发生10大惊人变化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074370.md#1">iPhone 15手机新功能 帮你找到朋友的位置</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/12/n14072004.md#1">紧急时找不到解决办法 那就变通思维吧！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060273.md#1">自制东南亚常见的甜点抹酱：香兰咖椰酱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14073249.md#1">无声延伸的奇迹——疾病源于生活习惯</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100256.md#1">幽幽古琴 唐诗如何表现它的美</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105182.md#1">【时事军事】“铁束”破了哈马斯“饱和攻击”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105107.md#1">【菁英论坛】习拜会 传中共要求“拜登微笑”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104205.md#1">【环球直击】李克强生前喊话引议 习李不合 团派全灭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103855.md#1">李克强在上海猝死  分析：疑点重重</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103857.md#1">李克强死亡8小时后发丧 有何黑幕</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103869.md#1">李克强猝死时刻与毛一致 分析：不排除更大地震</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104151.md#1">澳洲网红逛夜市被当“死侍” 网问穿西装不热吗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103752.md#1">进驻大陆平台引尴尬 香港视后唐诗咏被叫错名</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104062.md#1">自己的替身瘫痪 “哈利波特”将事件制成纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103712.md#1">梁朝伟抵东京影展大师班 忆被王家卫调教演技</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102115.md#1">糖真的致癌吗？专家揭秘糖和癌症的7大关联</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104170.md#1">心理学家：快乐会传染 但悲伤不会</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/18/n14097756.md#1">戒掉花钱的瘾  5招助你降低购物欲</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/17/n14075664.htm">加拿大最难买房省份排名出炉</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075664.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
